# ut

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
src/ut/: __about__.py  __init__.py  destruct.py  fixtures.py  nget.py  service.py  utc_now.py
tests/: __init__.py  test_destruct.py  test_fixtures.py  test_nget.py  test_service.py  test_utc_now.py
